<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_menu_principal"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_carta"
            android:icon="@drawable/ic_menu_carta"
            android:title="@string/menu_carta" />
        <item
            android:id="@+id/nav_ordenar"
            android:icon="@drawable/ic_menu_ordenar"
            android:title="@string/menu_ordenar" />
        <item
            android:id="@+id/nav_codigo"
            android:icon="@drawable/ic_menu_codigo"
            android:title="@string/menu_codigo" />
    </group>
</menu>