<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".ui.pagar_confirmado.PagarConfirmadoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sh_contenedores"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <!-- titulo -->
        <TextView
            android:id="@+id/fr_pagar_confirmado_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fr_pagar_confirmado_titulo"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textAppearance="@style/titulos"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- texto 1 -->
        <TextView
            android:id="@+id/fr_pagar_confirmado_texto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fr_pagar_confirmado_texto1"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/texto"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/fr_pagar_confirmado_titulo"/>

        <!-- campo 1 -->
        <TextView
            android:id="@+id/fr_pagar_confirmado_campo1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/texto"
            android:textAlignment="center"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/sh_edittext"
            app:layout_constraintTop_toBottomOf="@id/fr_pagar_confirmado_texto1"/>

        <!-- texto 2 -->
        <TextView
            android:id="@+id/fr_pagar_confirmado_texto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fr_pagar_confirmado_texto2"
            android:layout_marginTop="40dp"
            android:textAppearance="@style/texto"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/fr_pagar_confirmado_campo1"/>

        <!-- campo 2 -->
        <TextView
            android:id="@+id/fr_pagar_confirmado_campo2"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            tools:text="@string/espacio"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/texto"
            android:textAlignment="center"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/sh_edittext"
            app:layout_constraintTop_toBottomOf="@id/fr_pagar_confirmado_texto2"/>

        <!-- texto 3 -->
        <TextView
            android:id="@+id/fr_pagar_confirmado_texto3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fr_pagar_confirmado_campo3"
            android:layout_marginTop="40dp"
            android:textAppearance="@style/texto"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/fr_pagar_confirmado_campo2"/>

        <!-- boton -->
        <TextView
            android:id="@+id/fr_pagar_confirmado_boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/sh_boton"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/fr_pagar_confirmado_boton"
            android:textAppearance="@style/botones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fr_pagar_confirmado_texto3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>